--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "contentful": "^7.5.0",
+    "downshift": "^3.2.7",
+    "google-map-react": "^1.1.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
