chugging along with front end

--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "autosuggest-highlight": "^3.1.1",
     "contentful": "^7.5.0",
     "downshift": "^3.2.7",
     "google-map-react": "^1.1.2",
     "react": "^16.8.4",
+    "react-autocomplete": "^1.8.1",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
