--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "the-careless-wombats",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
