--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "server.js",
-    "start": "node server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\" \"npm run server\"",
     "client": "cd client && npm run start",
@@ -35,7 +35,10 @@
     "bcrypt": "^3.0.5",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "concurrently": "^4.1.0",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "mongoose": "^5.4.19",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.6"
   }
