--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "description": "An application to help users find local restaurant and food deals, such as happy hour and trivia nights",
   "main": "server.js",
+  "proxy": "http://localhost:3001",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "server.js",
-    "start": "node server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\" \"npm run server\"",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "install": "cd client && npm install",
+    "install": "cd client && npm nstall",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
@@ -36,6 +35,7 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "express": "^4.16.4",
+    "mongoose": "^5.4.19",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.6"
   }
