--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "express": "^4.16.4",
+    "mongoose": "^5.4.20",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.6"
   }
